[refactor] InputView 클래스에서 검증 메서드 InputViewValidator로 옮기기